--- a/.gitignore
+++ b/.gitignore
@@ -4,60 +4,26 @@ __pycache__/
 *$py.class
 *.so
 .Python
-build/
-develop-eggs/
-dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
-wheels/
-*.egg-info/
-.installed.cfg
-*.egg
-
-# Virtual Environment
-venv/
 env/
+venv/
 ENV/
 .venv
 
-# IDE
+# Environment variables
+.env
+.env.local
+
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
-*~
-
-# Environment variables - Keep .env but add it to gitignore for security
-.env
 
 # OS
 .DS_Store
 Thumbs.db
 
-# FAISS index files
-*.index
-*.faiss
-
-# Logs
-*.log
-
-# LangGraph
-.langgraph/
-langgraph_data/
-
-# Temporary files
-*.tmp
-temp/
-
-# Old files to ignore
-config.py
-nodes.py
-graph.py
-main.py
-rag_agent_langgraph.py
+# Project specific
+*.db
+*.sqlite
+logs/
